welcome.lessons.welcome.array.island.Island.scala.error
island:3: error: not found: value nums
  for (i<-1 to nums.length){
               ^island:4: error: not found: value nums
    if(nums(i)>nums(i-1)){level+=1}
       ^island:4: error: not found: value nums
    if(nums(i)>nums(i-1)){level+=1}
               ^