welcome.lessons.welcome.array.island.Island.scala.code
def island(num:Array[Int]): Int = {
  var level=0
  for (i<-1 to nums.length){
    if(nums(i)>nums(i-1)){level+=1}
   	}
	return level
}